fix(videofeed): 채널 추가/목록·필터 API + 보존기간·max_per_run·429 재시도 버그 수정
- 알상무/미과장 채널 추가 (ChannelSeedInitializer)
- 관리자 채널 목록 API(GET /api/admin/feed/channels), 공개 채널 필터 API
  (GET /api/video-feed/channels), /videos에 channelId 파라미터 추가
- Swagger가 /api/**만 스캔해 /dev/** 엔드포인트가 안 보이던 문제 수정
  (SwaggerConfig pathsToMatch 확장)
- VideoRetentionService의 self-invocation + JPA 파생 delete 쿼리가
  SimpleJpaRepository 클래스 레벨 트랜잭션을 상속받지 못해 정리가 계속
  조용히 실패해온 버그 수정 - 삭제 실행부를 VideoRetentionDeleteService로
  분리해 정상적으로 트랜잭션 프록시를 타도록 함
- max_per_run을 "수집 사이클" 단위에서 "영상 발행일 기준 하루" 단위로
  재설계 - 신규 채널 백로그가 한 사이클에 몰릴 때 대부분 영구 배제되던
  문제 해결
- Gemini 429(RPM) 레이트리밋을 500으로 뭉뚱그리던 문제 수정 - Toss
  클라이언트와 동일한 1회 재시도 패턴 도입
- AI 요약 응답에 macroPoints(매크로/거시 코멘트) 필드 추가 - 종목에
  안 묶이는 시장 전반 코멘트를 1급 항목으로 구조화

전체 백엔드 테스트(:core:test :api:test) 통과 확인

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>